--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -25,7 +25,7 @@
         android:id="@+id/textView17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
         android:text="GELİŞMİŞ UYGULAMA AYARLARI"
         android:textColor="@color/white"
@@ -37,8 +37,8 @@
     <ImageView
         android:id="@+id/imageView28"
         android:layout_width="wrap_content"
-        android:layout_height="372dp"
-        android:layout_marginTop="26dp"
+        android:layout_height="300dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView27"
         app:layout_constraintStart_toStartOf="@+id/imageView27"
         app:layout_constraintTop_toBottomOf="@+id/textView17"
@@ -49,7 +49,7 @@
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="32dp"
         android:checked="false"
         android:fontFamily="@font/poppinsbold"
         android:text="CİHAZI ETKİNLEŞTİR"
@@ -66,7 +66,7 @@
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/poppinsbold"
         android:text="KİRLİ SU GÖSTERGESİ"
         android:textColor="@color/white"
@@ -82,7 +82,7 @@
         android:layout_width="320dp"
         android:layout_height="50dp"
         android:layout_marginStart="104dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:fontFamily="@font/poppinsbold"
         android:text="DENGE SİSTEMİ"
         android:textColor="@color/white"
@@ -97,13 +97,14 @@
         android:id="@+id/button"
         android:layout_width="148dp"
         android:layout_height="50dp"
-        android:layout_marginTop="3dp"
+        android:layout_marginTop="4dp"
         android:background="@drawable/ayargirisbtn"
         android:fontFamily="@font/poppinsbold"
         android:text="KAYDET"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView28"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="@+id/imageView28"
         app:layout_constraintTop_toBottomOf="@+id/imageView28" />
 
@@ -144,7 +145,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/imageView28"
         app:layout_constraintTop_toBottomOf="@+id/textView17">
@@ -166,7 +167,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/imageView28"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout19">
@@ -189,7 +190,7 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:orientation="horizontal"
         app:layout_constraintStart_toEndOf="@+id/imageView28"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout20">
@@ -211,8 +212,8 @@
         android:id="@+id/diagnostikbtn"
         android:layout_width="37dp"
         android:layout_height="50dp"
-        android:layout_marginStart="132dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="36dp"
         app:layout_constraintStart_toEndOf="@+id/linearLayout20"
         app:layout_constraintTop_toBottomOf="@+id/imageView29"
         app:srcCompat="@drawable/bluetooth" />
@@ -221,21 +222,21 @@
         android:id="@+id/textView24"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="20dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|start"
         android:text="478208"
         android:textColor="@color/white"
         android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@+id/diagnostikbtn"
-        app:layout_constraintStart_toEndOf="@+id/linearLayout19" />
+        app:layout_constraintStart_toEndOf="@+id/linearLayout19"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout19" />
 
     <ImageView
         android:id="@+id/imageView29"
         android:layout_width="37dp"
         android:layout_height="50dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout20"
         app:layout_constraintStart_toEndOf="@+id/textView24"
         app:srcCompat="@drawable/bluetooth" />
@@ -244,8 +245,8 @@
         android:id="@+id/textView27"
         android:layout_width="37dp"
         android:layout_height="50dp"
-        android:layout_marginStart="96dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="32dp"
         android:layout_weight="1"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
