--- a/app/src/main/res/layout/fragment_enerji.xml
+++ b/app/src/main/res/layout/fragment_enerji.xml
@@ -199,12 +199,14 @@
         android:id="@+id/textView59"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="68dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppinsextralight"
         android:gravity="center"
         android:text="7"
         android:textSize="54dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView17"
+        app:layout_constraintEnd_toStartOf="@+id/textView65"
         app:layout_constraintStart_toStartOf="@+id/akudolum3"
         app:layout_constraintTop_toTopOf="@+id/akudolum3"
         app:layout_constraintVertical_bias="0.411" />
@@ -219,8 +221,6 @@
         android:textSize="54sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView17"
         app:layout_constraintEnd_toEndOf="@+id/imageView17"
-        app:layout_constraintHorizontal_bias="0.833"
-        app:layout_constraintStart_toEndOf="@+id/textView59"
         app:layout_constraintTop_toTopOf="@+id/imageView17"
         app:layout_constraintVertical_bias="0.589" />
 </androidx.constraintlayout.widget.ConstraintLayout>
