--- a/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_gelismis_uygulama_ayarlari.xml
@@ -18,7 +18,7 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/re" />
 
     <TextView
@@ -107,29 +107,6 @@
         app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="@+id/imageView28"
         app:layout_constraintTop_toBottomOf="@+id/imageView28" />
-
-    <ImageView
-        android:id="@+id/backbtn"
-        android:layout_width="35dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="100dp"
-        android:foregroundGravity="center"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/textView28"
-        app:srcCompat="@drawable/back" />
-
-    <TextView
-        android:id="@+id/textView28"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="90dp"
-        android:fontFamily="@font/poppinsmedium"
-        android:text="KULLANICI AYARLARINA GERİ GÖN"
-        android:textColor="@color/white"
-        android:textSize="16sp"
-        app:layout_constraintStart_toEndOf="@+id/backbtn"
-        app:layout_constraintTop_toBottomOf="@+id/switch4" />
 
     <ImageView
         android:id="@+id/imageView33"
@@ -255,5 +232,21 @@
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/linearLayout21"
         app:layout_constraintTop_toBottomOf="@+id/diagnostikbtn" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="76dp"
+        android:background="@android:color/transparent"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:layout_constraintEnd_toStartOf="@+id/button"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/switch4"
+        app:navigationIcon="@drawable/back"
+        app:title="KULLANICI AYARLARINA GERİ GÖN" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
