--- a/app/src/main/res/layout/activity_diagnostik_menu.xml
+++ b/app/src/main/res/layout/activity_diagnostik_menu.xml
@@ -27,7 +27,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
-        android:text="DİAGNOSTİK MENÜ"
+        android:text="@string/diagnostikmenu"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -71,7 +71,7 @@
 
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 01"
+                android:text="@string/buton01"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -85,7 +85,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 07"
+                android:text="@string/buton07"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -98,7 +98,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 13"
+                android:text="@string/buton_13"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -121,7 +121,7 @@
 
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 02"
+                android:text="@string/buton_02"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -135,7 +135,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 08"
+                android:text="@string/buton_08"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -148,7 +148,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 14"
+                android:text="@string/buton_14"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -168,7 +168,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 03"
+                android:text="@string/buton_03"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -182,7 +182,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 09"
+                android:text="@string/buton_09"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -195,7 +195,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 15"
+                android:text="@string/buton_15"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -215,7 +215,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 04"
+                android:text="@string/buton_04"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -229,7 +229,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 10"
+                android:text="@string/buton_10"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -242,7 +242,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 16"
+                android:text="@string/buton_16"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -264,7 +264,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 05"
+                android:text="@string/buton_05"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -278,7 +278,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 11"
+                android:text="@string/buton_11"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -291,7 +291,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 17"
+                android:text="@string/buton_17"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -313,7 +313,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 06"
+                android:text="@string/buton_06"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -327,7 +327,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 12"
+                android:text="@string/buton_12"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -340,7 +340,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="BUTON 18"
+                android:text="@string/buton_18"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -373,7 +373,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 01"
+                android:text="@string/led_01"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -387,7 +387,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 07"
+                android:text="@string/led_07"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -400,7 +400,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 13"
+                android:text="@string/led_13"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -420,7 +420,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 02"
+                android:text="@string/led_02"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -434,7 +434,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 08"
+                android:text="@string/led_08"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -447,7 +447,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 14"
+                android:text="@string/led_14"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -469,7 +469,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 03"
+                android:text="@string/led_03"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -483,7 +483,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 09"
+                android:text="@string/led_09"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -496,7 +496,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 15"
+                android:text="@string/led_15"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -516,7 +516,7 @@
                 android:layout_marginStart="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 04"
+                android:text="@string/led_04"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -530,7 +530,7 @@
                 android:layout_marginRight="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 10"
+                android:text="@string/led_10"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -543,7 +543,7 @@
                 android:layout_marginEnd="10dp"
                 android:layout_weight="1"
                 android:fontFamily="@font/poppinsbold"
-                android:text="LED 16"
+                android:text="@string/led_16"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 android:thumb="@drawable/ellipse1"
@@ -567,7 +567,7 @@
             android:layout_height="60dp"
             android:layout_marginStart="14dp"
             android:fontFamily="@font/poppinsbold"
-            android:text="LED 05"
+            android:text="@string/led_05"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:thumb="@drawable/ellipse1"
@@ -580,7 +580,7 @@
             android:layout_marginLeft="7dp"
             android:layout_weight="1"
             android:fontFamily="@font/poppinsbold"
-            android:text="LED 11"
+            android:text="@string/led_11"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:thumb="@drawable/ellipse1"
@@ -604,7 +604,7 @@
             android:layout_marginStart="10dp"
             android:layout_weight="1"
             android:fontFamily="@font/poppinsbold"
-            android:text="LED 06"
+            android:text="@string/led_06"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:thumb="@drawable/ellipse1"
@@ -617,7 +617,7 @@
             android:layout_marginLeft="7dp"
             android:layout_weight="1"
             android:fontFamily="@font/poppinsbold"
-            android:text="LED 12"
+            android:text="@string/led_12"
             android:textColor="@color/white"
             android:textSize="16sp"
             android:thumb="@drawable/ellipse1"
@@ -632,7 +632,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="64dp"
         android:background="@drawable/ayargirisbtn"
-        android:text="KAYDET"
+        android:text="@string/kaydet"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout9"
         app:layout_constraintStart_toEndOf="@+id/linearLayout12"
