--- a/app/src/main/res/layout/fragment_anasayfa.xml
+++ b/app/src/main/res/layout/fragment_anasayfa.xml
@@ -14,7 +14,7 @@
         android:layout_height="36dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="AKÜ"
+        android:text="@string/aku"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView32"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="TEMİZ SU"
+        android:text="@string/temiz_su"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView44"
@@ -97,7 +97,7 @@
         android:layout_width="190dp"
         android:layout_height="26dp"
         android:gravity="center"
-        android:text="CUMARTESİ"
+        android:text="@string/gun"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/dk"
@@ -110,7 +110,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="AKÜ GERİLİMİ"
+        android:text="@string/aku_gerilim"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView32"
@@ -123,7 +123,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="ATIK SU"
+        android:text="@string/atik_su"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView44"
@@ -148,7 +148,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|end"
-        android:text="İÇ SICAKLIK"
+        android:text="@string/sicaklik"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/imageView45"
@@ -162,7 +162,7 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center|start"
-        android:text="DIŞ SICAKLIK"
+        android:text="@string/dis_sicaklik"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintStart_toEndOf="@+id/imageView45"
@@ -226,7 +226,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/poppinsextralight"
             android:gravity="center|end"
-            android:text="V"
+            android:text="@string/v"
             android:textColor="@color/white"
             android:textSize="34sp" />
     </LinearLayout>
@@ -377,7 +377,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppinsextralight"
-            android:text="°C"
+            android:text="@string/derece"
             android:textColor="@color/white"
             android:textSize="34sp" />
     </LinearLayout>
@@ -415,7 +415,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsmedium"
-        android:text="Mayıs"
+        android:text="@string/ay"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/textView34"
@@ -432,7 +432,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsmedium"
-        android:text="2023"
+        android:text="@string/yil"
         android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintStart_toEndOf="@+id/ay"
