--- a/app/src/main/res/layout/activity_kullanici_uygulama_ayarlari.xml
+++ b/app/src/main/res/layout/activity_kullanici_uygulama_ayarlari.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="KULLANICI UYGULAMA AYARLARI"
+        android:text="@string/kullanici_uygulama_ayarlari"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
             android:layout_height="match_parent"
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
-            android:text="TARİH"
+            android:text="@string/tarih"
             android:textColor="@color/white"
             android:textSize="20sp" />
 
