--- a/app/src/main/res/layout/anasayfabutton.xml
+++ b/app/src/main/res/layout/anasayfabutton.xml
@@ -31,7 +31,7 @@
         android:layout_gravity="center"
         android:fontFamily="@font/poppinsmedium"
         android:gravity="center"
-        android:text="Ana Sayfa"
+        android:text="@string/ana_sayfa"
         android:textColor="@color/white"
         android:textSize="16sp">
 
