--- a/app/src/main/res/layout/enerjibutton.xml
+++ b/app/src/main/res/layout/enerjibutton.xml
@@ -31,7 +31,7 @@
     android:layout_gravity="center"
     android:fontFamily="@font/poppinsmedium"
     android:gravity="center"
-    android:text="Enerji"
+    android:text="@string/enerji"
     android:textColor="@color/white"
     android:textSize="16sp">
 
