--- a/app/src/main/res/layout/fragment_denge_sistemi.xml
+++ b/app/src/main/res/layout/fragment_denge_sistemi.xml
@@ -125,7 +125,7 @@
             android:layout_weight="1"
             android:fontFamily="@font/poppinsbold"
             android:gravity="center"
-            android:text="KOMPRESÖR"
+            android:text="@string/kompresor"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
@@ -158,7 +158,7 @@
         android:layout_marginTop="34dp"
         android:fontFamily="@font/poppinsblack"
         android:gravity="center"
-        android:text="SAĞ"
+        android:text="@string/sag"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout6"
@@ -172,7 +172,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="34dp"
         android:fontFamily="@font/poppinsblack"
-        android:text="SOL"
+        android:text="@string/sol"
         android:textColor="#FDFDFD"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout7"
