--- a/app/src/main/res/layout/fragment_enerji.xml
+++ b/app/src/main/res/layout/fragment_enerji.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="AKÜ"
+        android:text="@string/akuu"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView17"
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="GÜNEŞ PANELİ"
+        android:text="@string/gunes_paneli"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView19"
@@ -83,7 +83,7 @@
         android:layout_height="24dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="AKÜ GERİLİMİ"
+        android:text="@string/aku_gerilimi"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView17"
@@ -146,7 +146,7 @@
         android:layout_height="24dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/poppinsbold"
-        android:text="PANEL GERİLİMİ"
+        android:text="@string/panel_gerilimi"
         android:textColor="@color/white"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView19"
