--- a/app/src/main/res/layout/fragment_kontroller.xml
+++ b/app/src/main/res/layout/fragment_kontroller.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
-        android:text="USB KULLANIMI"
+        android:text="@string/usb_kullanimi"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView9"
@@ -29,7 +29,7 @@
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppinsbold"
         android:gravity="center"
-        android:text="HİDROFOR"
+        android:text="@string/hidrofor"
         android:textColor="@color/white"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView10"
@@ -98,7 +98,7 @@
             android:layout_weight="1"
             android:background="@drawable/acikbtngri"
             android:fontFamily="@font/poppinsbold"
-            android:text="AÇIK"
+            android:text="@string/acik"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
@@ -110,7 +110,7 @@
             android:layout_weight="1"
             android:background="@drawable/kapalikirmizibtn"
             android:fontFamily="@font/poppinsbold"
-            android:text="KAPALI"
+            android:text="@string/kapali"
             android:textColor="@color/white"
             android:textSize="16sp" />
 
