--- a/app/src/main/res/layout/fragment_ayarlar.xml
+++ b/app/src/main/res/layout/fragment_ayarlar.xml
@@ -54,7 +54,7 @@
         android:background="@drawable/ayarlarbutton"
         android:ems="10"
         android:hint="@string/sifre"
-        android:inputType="text"
+        android:inputType="text|textPassword"
         android:padding="5dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
